--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,15 +1,64 @@
-.container {
+
+body, html {
     font-family: 'Source Sans Pro', sans-serif;
 }
 
+header {
+    margin: -10px;
+    color: ghostwhite;
+}
+
+.parallax { 
+    
+    height: 600px;
+    /* The image used */
+    background-image: url("assets/header.jpg");
+
+    /* Set a specific height */
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+
 h1 {
-    margin-top: 130px;
+    margin-top: 65px;
+    position: absolute;
+    left: 50px;
+    top: 80px;
+    
+    font-size: 5vw;
+}
+
+h2 {
+    padding-top: 40px;
+    margin-left: -10px;
+    margin-right: -10px;
+    margin-top: 0;
+    margin-bottom: -40px;
+    text-align: center;
+}
+
+h3 {
+    color: ghostwhite;
+    position: absolute;
+    display: block;
+    
+}
+
+p {
+    padding: 10%;
+    text-align: justify;
 }
 
 .navigation {
-    background-color: lightgrey;
-    text-align: center;
-    color: ghostwhite;
+    background-color: white;
+    padding-bottom: 0.5%;
+    text-align: left;
+    font-size: 1.5em;
     position: fixed;
     top: 0px;
     left: 0px;
@@ -18,44 +67,65 @@ h1 {
 }
 
 .navigation li {
-    padding-top: 15px;
-    padding-bottom: 10px;
+    padding-right: 4%;
     display: inline-block;
+    margin-left: 10px;
     margin-right: 10px;
 }
 
 .navigation a {
     text-decoration: none;
-    color: ghostwhite;
-}
-
-.navigation ul {
-    height: 70px;
-}
-
-.navigation a:hover {
     color: black;
 }
 
-.blog-post {
-    width: 70%;
-    margin: 0 auto;
-    margin-top: 30px;
-    text-align: center;
-    background-color: pink;
-    padding: 20px;
+.navigation ul {
+    height: 10px;
 }
 
-.blog-post h2 {
-    transition: 1s;
-    font-size: 1em;
+.navigation a:hover {
+    color: lightgray;
 }
 
-.blog-post h2:hover {
-    transition: 1s;
-    font-size: 1.5em;
+.info1 {
+    background: url(assets/talo2.jpg);
+    background-size: 100%;
+    color: ghostwhite;
+    margin: -10px;
 }
 
+.info1 a {
+    color: ghostwhite;
+}
+
+.info {
+    margin: -10px;
+}
+
+.info2 {
+    display: inline-grid;
+    float: right;
+}
+
+.back {
+    position: absolute;
+    z-index: 1;
+}
+
+.front {
+    position: absolute;
+    text-decoration-color: none;
+    z-index: 2;
+    font-size: 10vw;
+}
+
+.front a {
+    text-decoration: none;
+    color: ghostwhite
+}
+
+.front a:hover {
+    color: darkgrey;
+}
 .resize {
     width: 100%;
     max-width: 1000px;
@@ -76,4 +146,23 @@ h1 {
     width: 100%;
     height: 100%;
 }
+
+@media screen and (max-width: 1000px){
+    .parallax {
+        height: 500px;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .parallax {
+        height: 370px;
+    } 
+    
+    .navigation {
+        font-size: 1.2em;
+    }
+}
+
+
+    
 
