--- a/stylesheet.css
+++ b/stylesheet.css
@@ -147,15 +147,17 @@ p {
     height: 100%;
 }
 
-@media screen and (max-width: 1000px){
+@media screen and (max-width: 1024px){
     .parallax {
         height: 500px;
+        background-attachment: scroll;
     }
 }
 
 @media screen and (max-width: 800px) {
     .parallax {
         height: 370px;
+        background-attachment: scroll;
     } 
     
     .navigation {
