--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,14 +9,8 @@ header {
 }
 
 .parallax { 
-    
     height: 600px;
-    /* The image used */
     background-image: url("assets/header.jpg");
-
-    /* Set a specific height */
-
-    /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -86,50 +80,38 @@ p {
     color: lightgray;
 }
 
+.info {
+    color: ghostwhite;
+    font-size: 3vw;
+    margin: -10px;
+}
+
+.info a {
+    color: ghostwhite;
+}
+
 .info1 {
     background: url(assets/talo2.jpg);
-    background-size: 100%;
-    color: ghostwhite;
-    margin: -10px;
-}
-
-.info1 a {
-    color: ghostwhite;
-}
-
-.info {
-    margin: -10px;
+    background-size: 110%;
+    background-position: bottom;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
 }
 
 .info2 {
-    display: inline-grid;
-    float: right;
+    background: url(assets/talo3.jpg);
+    background-size: 110%;
+    background-position: bottom;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
 }
 
-.back {
-    position: absolute;
-    z-index: 1;
-}
-
-.front {
-    position: absolute;
-    text-decoration-color: none;
-    z-index: 2;
-    font-size: 10vw;
-}
-
-.front a {
-    text-decoration: none;
-    color: ghostwhite
-}
-
-.front a:hover {
-    color: darkgrey;
-}
-.resize {
-    width: 100%;
-    max-width: 1000px;
-    height: auto;
+.info3 {
+    background: url(assets/rakennuttaja.jpg);
+    background-size: 110%;
+    background-position: bottom;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
 }
 
 .video-container {
@@ -152,16 +134,32 @@ p {
         height: 500px;
         background-attachment: scroll;
     }
+    
+    .info1 {
+        background-attachment: scroll;
+    }
+    
+    .info2 {
+        background-attachment: scroll;
+    }
+    
+    .info3 {
+        background-attachment: scroll;
+    }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 700px) {
     .parallax {
         height: 370px;
         background-attachment: scroll;
     } 
     
+    .info {
+        font-size: 1em;
+    }
+    
     .navigation {
-        font-size: 1.2em;
+        font-size: 1.1em;
     }
 }
 
