--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 
-body, html {
+body {
     font-family: 'Source Sans Pro', sans-serif;
 }
 
@@ -23,7 +23,6 @@ h1 {
     position: absolute;
     left: 50px;
     top: 80px;
-    
     font-size: 5vw;
 }
 
@@ -37,10 +36,9 @@ h2 {
 }
 
 h3 {
-    color: ghostwhite;
-    position: absolute;
-    display: block;
-    
+    padding-top: 10%;
+    padding-left: 10%;
+    font-size: 1.1em;
 }
 
 p {
@@ -70,6 +68,10 @@ p {
 .navigation a {
     text-decoration: none;
     color: black;
+}
+
+.navigation a:active {
+    background-color: lightgrey;
 }
 
 .navigation ul {
@@ -114,19 +116,27 @@ p {
     background-repeat: no-repeat;
 }
 
-.video-container {
-    position: relative;
-    padding-bottom: 56.25%;
-    padding-top: 25px;
-    height: 0;
+.contact p {
+    padding-top: 0;
 }
 
-.video-container iframe {
+
+footer p {
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+#logo {
+    width: 7%;
+    padding: 10%;
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    right: 0;
+}
+
+#copy {
+    position: absolute;
+    bottom: 0;
+    text-align: center;
 }
 
 @media screen and (max-width: 1024px){
