--- a/stylesheet.css
+++ b/stylesheet.css
@@ -133,8 +133,7 @@ footer p {
 }
 
 #copy {
-    text-align: center;
-    margin-bottom: 0;
+    padding-left: 44%;
 }
 
 @media screen and (max-width: 1024px){
