--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,9 +28,9 @@ h1 {
 
 h2 {
     padding-top: 40px;
-    margin-left: -10px;
-    margin-right: -10px;
     margin-top: 0;
+    margin-left: 10%;
+    margin-right: 10%;
     margin-bottom: -40px;
     text-align: center;
 }
@@ -38,6 +38,7 @@ h2 {
 h3 {
     padding-top: 10%;
     padding-left: 10%;
+    padding-right: 10%;
     font-size: 1.1em;
 }
 
@@ -81,6 +82,72 @@ p {
 .navigation a:hover {
     color: lightgray;
 }
+
+.slideshow p {
+    padding-bottom: 0;
+}
+
+.slideshow {
+    margin: -10px;
+    text-align: center;
+    padding-bottom: 1%;
+}
+
+#date {
+    display: block;
+    margin-bottom: 4%;
+}
+
+.buttons {
+    padding-bottom: 5%;
+    margin-bottom: 50px;
+    width: 80%;
+    margin: auto;
+}
+
+.prev, .next, .pause {
+    cursor: pointer;
+    padding: 16px;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 3px 3px 3px 3px;
+}
+
+.next {
+    float: right;
+    margin-top: -16px;
+}
+
+.pause {
+    width: 3%;
+}
+
+.prev {
+    float: left;
+    margin-top: -16px;
+}
+
+.prev:hover, .next:hover, .pause:hover {
+    color: white;
+    background-color: black;
+}
+
+.dots {
+    text-align: center;
+}
+
+.dot {
+    cursor: pointer;
+    height: 13px;
+    width: 13px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
 
 .info {
     color: ghostwhite;
