--- a/stylesheet.css
+++ b/stylesheet.css
@@ -184,6 +184,16 @@ p {
     background-repeat: no-repeat;
 }
 
+.game {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    display: block;
+}
+
+.game canvas {
+    margin: auto;
+}
+
 .contact p {
     padding-top: 0;
 }
