--- a/stylesheet.css
+++ b/stylesheet.css
@@ -106,6 +106,7 @@ p {
     margin: -10px;
     text-align: center;
     padding-bottom: 1%;
+    height: 500px;
 }
 
 #date {
@@ -118,6 +119,10 @@ p {
     margin-bottom: 50px;
     width: 80%;
     margin: auto;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    top: 2360px;
 }
 
 .prev, .next, .pause {
