--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: 'Source Sans Pro', sans-serif;
 }
@@ -8,7 +7,7 @@ header {
     color: ghostwhite;
 }
 
-.parallax { 
+.parallax {
     height: 600px;
     background-image: url("assets/header.jpg");
     background-attachment: fixed;
@@ -17,6 +16,45 @@ header {
     background-size: cover;
 }
 
+.parallax-taloyhtio {
+    height: 600px;
+    background-image: url("assets/talo2.jpg");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.parallax-rakennuttaja {
+    height: 600px;
+    background-image: url("assets/rakennuttaja.jpg");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.parallax-omakotitalo {
+    height: 600px;
+    background-image: url("assets/talo3.jpg");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.parallax h1 {
+    top: 100px;
+}
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
 
 h1 {
     margin-top: 65px;
@@ -50,7 +88,7 @@ p {
 .navigation {
     background-color: white;
     padding-bottom: 0.5%;
-    text-align: left;
+    text-align: center;
     font-size: 1.5em;
     position: fixed;
     top: 0px;
@@ -83,6 +121,10 @@ p {
     color: lightgray;
 }
 
+article {
+    margin-bottom: -100px;
+}
+
 .media {
     margin: -10px;
     margin-bottom: 6%;
@@ -104,6 +146,7 @@ p {
 
 .slideshow {
     margin: -10px;
+    position: relative;
     text-align: center;
     padding-bottom: 1%;
     height: 500px;
@@ -122,10 +165,12 @@ p {
     position: absolute;
     transform: translate(-50%, -50%);
     left: 50%;
-    top: 2360px;
+    bottom: -40px;
 }
 
-.prev, .next, .pause {
+.prev,
+.next,
+.pause {
     cursor: pointer;
     padding: 16px;
     font-weight: bold;
@@ -148,12 +193,12 @@ p {
     margin-top: -16px;
 }
 
-.prev:hover, .next:hover, .pause:hover {
+.prev:hover,
+.next:hover,
+.pause:hover {
     color: white;
     background-color: black;
 }
-
-
 
 .info {
     color: ghostwhite;
@@ -171,6 +216,17 @@ p {
     background-position: bottom;
     background-attachment: fixed;
     background-repeat: no-repeat;
+    margin-top: 100px;
+}
+
+.info1-a {
+    background: url(assets/talo2.jpg);
+    background-size: 110%;
+    background-position: bottom;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    margin-top: 100px;
+    height: 500px;
 }
 
 .info2 {
@@ -189,9 +245,15 @@ p {
     background-repeat: no-repeat;
 }
 
+.gamediv p {
+    text-align: center;
+    padding-top: 3%;
+    padding-bottom: 3%;
+}
+
 .game {
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 30px;
+    padding-bottom: 30px;
     display: block;
 }
 
@@ -202,7 +264,6 @@ p {
 .contact p {
     padding-top: 0;
 }
-
 
 footer p {
     padding-top: 0;
@@ -219,24 +280,20 @@ footer p {
     padding-left: 44%;
 }
 
-@media screen and (max-width: 1024px){
+@media screen and (max-width: 1024px) {
     .parallax {
         height: 500px;
         background-attachment: scroll;
     }
-    
     .info1 {
         background-attachment: scroll;
     }
-    
     .info2 {
         background-attachment: scroll;
     }
-    
     .info3 {
         background-attachment: scroll;
     }
-    
     .media {
         background-attachment: scroll;
     }
@@ -246,21 +303,14 @@ footer p {
     .parallax {
         height: 370px;
         background-attachment: scroll;
-    } 
-    
+    }
     #media {
         width: 100%;
     }
-    
     .info {
         font-size: 1em;
     }
-    
     .navigation {
         font-size: 1.1em;
     }
 }
-
-
-    
-
